<resources>
    <string name="app_name">Haber Toplayıcı</string>
    <string name="main_title">İlk günden\nhaberdar olun</string>
    <string name="main_subtitle">Kusursuz Haber Uygulamamızla\nen son Haberleri keşfedin</string>
    <string name="main_button">Başlayalım</string>

    <string name="client_id">310341090202-ggf2185ggi5eb40sfqvbj6pqdl2rhq3d.apps.googleusercontent.com</string>
    <string name="search">Makale Ara</string>
    <string name="son_haberler">Son Haberler</string>
    <string name="tum_haberler">Tüm Haberler</string>

    <string name="api_key">278f45056a454eb7977466845b59c31c</string>
    <string name="published_by">Tarafından yayınlandı:</string>
    <string name="about">\tiçin yaklaşık\t</string>
    <string name="results">\tsonuçları</string>
    <string name="saved_articles">Kayıtlı Makaleler</string>
    <string name="bookmark">bookmark</string>
    <string name="home">home</string>
    <string name="haber">Haber</string>
    <string name="newsHeader">Toplayıcı</string>
    <string name="makale_ara">Makale Ara</string>
    <string name="profile">Profilim</string>
    <string name="login">GİRİŞ</string>
    <string name="OR">--- Ya Da ---</string>
    <string name="register">Kayıt Ol</string>
    <string name="email">Eposta</string>
    <string name="password">Şifre</string>
    <string name="noAccount">Hesabınız mı yok?</string>
    <string name="logout">Çıkış Yap</string>
    <string name="personal_information">Kişisel Bilgileriniz</string>
    <string name="Edit"><![CDATA[EKLE >]]></string>
    <string name="my_articles">Benim Makalelerim</string>
    <string name="username">kullanıcı adı</string>
    <string name="lastname">kullanıcı soyadı</string>
    <string name="have_an_account">Bir hesabınız mı var?</string>
    <string name="you_have_no_articles">Hiç Makaleniz Yok</string>
    <string name="add_article">Makale Ekle</string>
    <string name="article_title">Makale Başlığı</string>
    <string name="article_desc">Makale Açıklaması</string>
    <string name="article_content">Makale İçeriği</string>
    <string name="article_urls">makale url\'si</string>
    <string name="cancel">İptal Et</string>
    <string name="edit_article">edit article</string>
    <string name="delete_article">delete article</string>
    <string name="update_article">Makaleyi güncelle</string>
    <string name="edit_article_title">Makaleyi düzenle</string>
</resources>