<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryBLUE"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="358dp"
                android:layout_height="272dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/register_img" />

            <EditText
                android:id="@+id/idEtRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimaryBLUE"
                android:textSize="18sp"
                android:autofillHints="kullanıcı adı" />

            <EditText
                android:id="@+id/idEtRegisterLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/lastname"
                android:inputType="text"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimaryBLUE"
                android:textSize="18sp"
                android:autofillHints="kullanıcı soyadı" />

            <EditText
                android:id="@+id/idEtRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimaryBLUE"
                android:textSize="18sp"
                android:autofillHints="kullanıcı eposta" />

            <EditText
                android:id="@+id/idEtRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimaryBLUE"
                android:textSize="18sp"
                android:autofillHints="kullanıcı Şifre" />

            <Button
                android:id="@+id/idBtnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/button_primarycolor_blue"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="38dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoregular"
                    android:text="@string/have_an_account"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/idTvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoblack"
                    android:text="@string/login"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorPrimaryBLUE"
                    android:textSize="19sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>