<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!-- login page design has image in background image with black gradient at the bottom and a text with button -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/newspaperbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_main_page"
        android:gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:fontFamily="@font/nunitoblack"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/main_subtitle"
            android:textColor="@color/white"
            android:alpha="0.6"
            android:textSize="20sp"
            android:fontFamily="@font/nunitobold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idMainBtn"
            android:layout_marginTop="120dp"
            android:background="@drawable/main_button_background"
            android:fontFamily="@font/nunitobold"
            android:text="@string/main_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="12dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>