<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E3E3"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/idLoginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="30dp"
        app:contentPaddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunitoblack"
                android:gravity="center"
                android:letterSpacing=".3"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryBLUE"
                android:textSize="38sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/idEtEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/search_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:autofillHints="emailAddress" />

                <EditText
                    android:id="@+id/idEtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:autofillHints="password"
                    android:background="@drawable/search_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/idBtnLogin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_primarycolor_blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitoregular"
                        android:text="@string/noAccount"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/idTvRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitoblack"
                        android:text="@string/register"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/colorPrimaryBLUE"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>