<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlNews"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingTop="25dp"
    android:paddingRight="25dp"
    tools:context=".NewsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haber"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunitoblack"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newsHeader"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/nunitoblack"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSearch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_background"
                    android:ems="10"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />


                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/search_button"
                    android:src="@drawable/search" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSonHaberler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunitoblack"
                android:text="@string/son_haberler"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopNews"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/top_news_rv_item" />

            <TextView
                android:id="@+id/tvTumHaberler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunitoblack"
                android:text="@string/tum_haberler"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/category_rv_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEverythingNews"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/everything_news_rv_item" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/idBottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        app:menu="@menu/floating_app_bar"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        android:background="@drawable/bottom_appbar_bg"
        />


</RelativeLayout>