<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="155dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunitoblack"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/colorPrimaryBLUE"
                android:textSize="28sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="233dp"
                    android:layout_height="219dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/profile_image"
                    android:contentDescription="@string/profile" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/category_button"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/nunitoblack"
                    android:gravity="center"
                    android:text="@string/OR"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_primarycolor_blue"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/idProfileBottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bottom_appbar_bg"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/floating_app_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>